# spatial-omics-tumor-drug-response-prediction

./: .gitattributes  .gitignore  README.md  project_profile.example.yaml  requirements-notebooks.txt  sort_training_dataset_intake.py
prediction_modeling_pipeline/spatial_prediction_model_V2/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  pyproject.toml  requirements.txt
prediction_modeling_pipeline/spatial_prediction_model_V2/configs/: default.yaml  full_run.yaml  smoke_test.yaml
prediction_modeling_pipeline/spatial_prediction_model_V2/examples/: run_full.ps1  run_smoke.ps1
prediction_modeling_pipeline/spatial_prediction_model_V2/scripts/: 00_run_spatial_prediction_model_v2.py  01_validate_inputs.py  02_build_modeling_dataset.py  03_train_probability_baseline.py  04_train_pair_level_residual_model.py  05_build_residual_biology_registry.py  06_train_broad_residual_model.py  07_train_filtered_per_treatment_residual_models.py  08_curate_per_treatment_residual_models.py  09_label_shuffle_validate_tier1.py  10_build_integrated_interpretation_package.py  11_make_publication_tables.py  12_qc_v2_outputs.py
prediction_modeling_pipeline/spatial_prediction_model_V2/src/spm_v2/: __init__.py  data_discovery.py  dataset_builder.py  feature_governance.py  interpretation.py  io_utils.py  model_training.py  provenance.py  reporting.py  residual_pair_modeling.py  target_building.py  validation.py
prediction_modeling_pipeline/spatial_prediction_model_V2/tests/: test_repository_integrity.py  test_v2_scaffold_imports.py
(+216 files in other folders)
